# MediaSDK

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: icon_shift.xml  icon_take.xml  option_item_bg.xml  option_item_text_color.xml  setting_option_bg.xml
app/src/main/res/layout/: activity_main.xml  window_beauty_setting.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
lib-opencv/: CMakeLists.txt  build.gradle
lib-opencv/src/androidTest/java/com/johan/opencv/: ExampleInstrumentedTest.java
lib-opencv/src/main/: AndroidManifest.xml
lib-opencv/src/main/cpp/: android_opencv.cpp  android_util.cpp  c_util.cpp  face_detector.cpp  mtcnn.cpp  opencv_util.cpp
lib-opencv/src/main/cpp/dlib/image_processing/: shape_predictor.h
lib-opencv/src/main/cpp/include/: android_util.h  c_util.h  face_detector.h  huffman.hpp  model_utils.hpp  mtcnn.h  opencv_util.h
lib-opencv/src/main/cpp/include/opencv2/core/: ovx.hpp  softfloat.hpp
lib-opencv/src/main/java/com/johan/opencv/: AndroidOpencv.java  FaceDetectResult.java  FaceDetector.java  FaceInfo.java  FileHelper.java  IFaceDetector.java  OpencvThread.java
lib-opencv/src/main/res/values/: strings.xml
lib-opencv/src/test/java/com/johan/opencv/: ExampleUnitTest.java
video-record/: build.gradle
video-record/src/main/: AndroidManifest.xml
video-record/src/main/res/raw/: fragment_beauty_shader.glsl  fragment_camera_shader.glsl  fragment_shader.glsl  vertex_camera_shader.glsl  vertex_shader.glsl  vertex_watermark_shader.glsl
(+27 files in other folders)
